--- a/index.html
+++ b/index.html
@@ -5,21 +5,18 @@
   </body>
   <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
-  <script>
+  <!-- JSX를 이용하기 위해 바벨을 이용한다. -->
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script type="text/babel">
     const root = document.getElementById("root");
-    const heading = React.createElement("h3", null, "Hello React Js!");
-    const btn = React.createElement(
-      "button",
-      {
-        onClick: () => {
-          console.log("clicked");
-        },
-        style: { backgroundColor: "aqua" },
-      },
-      "Click Me"
+    const heading = <h3>Hello React JS!</h3>;
+    const btn = (
+      <button onClick={() => console.log("clicked")} style={{ backgroundColor: "aqua" }}>
+        Click Me
+      </button>
     );
-    //property에 addEvent를 넣을수있다!
     const container = React.createElement("div", null, [heading, btn]);
+    //RENDERING
     ReactDOM.render(container, root);
   </script>
 </html>
