--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- vanillaJS와 비교 -->
+<!-- Convert minutes -> hours -->
 <!DOCTYPE html>
 <html lang="ko">
   <body>
@@ -9,27 +9,32 @@
   <!-- JSX를 이용하기 위해 바벨을 이용한다. -->
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
-    //rendering
-    const root = document.getElementById("root");
-    ReactDOM.render(<App />, root);
-
     function App() {
-      //setState
-      const [counter, setCounter] = React.useState(0);
-
-      const onClick = () => {
-        setCounter(counter + 1);
-        //modifier는 "rendering과정 필요없이!" counter를 변환해준다!
+      const [minutes, setMinutes] = React.useState();
+      const onChange = (event) => {
+        console.log(event.target.value);
+        setMinutes(event.target.value);
       };
-
       return (
-        //html소환
         <div>
-          <h3>Total clicks: {counter}</h3>
-          <button onClick={onClick}>Click Me</button>
+          <h1>Super Converter</h1>
+          <label htmlFor="minutes">Minutes</label>
+          <input
+            value={minutes}
+            id="minutes"
+            type="number"
+            placeholder="Minutes"
+            onChange={onChange}
+          />
+          <h4>You want to convert {minutes} mins</h4>
+          <label htmlFor="hours">Hours</label>
+          <input id="hours" type="number" placeholder="Hours" />
         </div>
       );
     }
-    //html을 불러와 변수에 담고, 이벤트리스너를 붙이는 등 과정이 리액트를 쓰면 함수하나로 완성됨.
+
+    //rendering
+    const root = document.getElementById("root");
+    ReactDOM.render(<App />, root);
   </script>
 </html>
