--- a/index.html
+++ b/index.html
@@ -1,91 +1,129 @@
-<!-- Convert minutes -> hours -->
 <!DOCTYPE html>
 <html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>converter</title>
+  </head>
   <body>
     <div id="root"></div>
-    <script
-      src="https://kit.fontawesome.com/1d681e26c5.js"
-      crossorigin="anonymous"
-    ></script>
   </body>
   <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
   <!-- JSX를 이용하기 위해 바벨을 이용한다. -->
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
-    function MinutesToHours() {
-      const [amount, setAmount] = React.useState();
-      const [inverted, setInverted] = React.useState(false);
-
-      const onChange = (event) => {
-        setAmount(event.target.value); //minutes = value
-      };
-      const reset = () => setAmount(""); //the value goes back to 0
-      const onFlip = () => {
-        reset();
-        setInverted((current) => !current);
-      };
-
-      return (
-        <div>
-          <div>
-            <label htmlFor="minutes">When you put minutes here: </label>
-            <input
-              value={inverted ? Math.round(amount * 60) : amount}
-              id="minutes"
-              type="number"
-              placeholder="Minutes"
-              onChange={onChange}
-              disabled={inverted === true} //if inverted is true, it will be disabled
-            />
-            minutes
-          </div>
-          <div>
-            <label htmlFor="hours">it will be converted to rounded </label>
-            <input
-              value={inverted ? amount : Math.round(amount / 60)}
-              id="hours"
-              type="number"
-              placeholder="Hours"
-              onChange={onChange}
-              disabled={inverted === false}
-            />
-            hours
-          </div>
-          <button onClick={reset}>Reset</button>
-          <button onClick={onFlip}>{inverted ? "hours to mins" : "mins to hours"}</button>
-        </div>
-      );
-    }
-
-    function KmToMiles() {
-      return <h3>Km to Miles</h3>;
-    }
-
-    function App() {
-      //swtich function
-      const [index, setIndex] = React.useState("x");
-      const onSelect = (event) => {
-        setIndex(event.target.value);
-      };
-      return (
-        <div>
-          <h1>Super Converter</h1>
-          <select value={index} onChange={onSelect}>
-            <option value="x">Select your units</option>
-            <option value="0">Minutes & Hours</option>
-            <option value="1">Kilometers & Miles</option>
-          </select>
-          <hr />
-          {index === "x" ? "Please select your units" : null}
-          {index === "0" ? <MinutesToHours /> : null}
-          {index === "1" ? <KmToMiles /> : null}
-        </div>
-      );
-    }
-
-    //rendering
+    // Rendering
     const root = document.getElementById("root");
     ReactDOM.render(<App />, root);
+
+    function App() {
+      const [index, setIndex] = React.useState("x");
+      const onChange = (event) => {
+        console.log(event.target.value);
+        setIndex(event.target.value); // input value -> index -> html
+      };
+      return (
+        <div>
+          <h1>Sexy Converter</h1>
+          <select value={index} onChange={onChange}>
+            <option value="x">Select your units.</option>
+            <option value="0">Minutes to Hours</option>
+            <option value="1">Km to Miles</option>
+          </select>
+          <br />
+          {index === "0" ? <TimeConverter /> : null}
+          {index === "1" ? <DistConverter /> : null}
+        </div>
+      );
+    }
+    function TimeConverter() {
+      const [amount, setAmount] = React.useState();
+      const [invert, setInvert] = React.useState(false); //initial invert ==false
+      const onChange = (event) => {
+        setAmount(event.target.value);
+      };
+      const onReset = () => {
+        setAmount("");
+      };
+      const onInvert = () => {
+        onReset();
+        setInvert((state) => !state);
+      };
+      return (
+        <div>
+          <h3>Time converter</h3>
+          <label htmlFor="minutes">Minutes: </label>
+          <input
+            min="0"
+            value={invert ? Math.round(amount * 60) : amount}
+            onChange={onChange}
+            id="minutes"
+            type="number"
+            placeholder="Minutes"
+            disabled={invert}
+          />
+          mins
+          <br />
+          <label htmlFor="hours">Hours: </label>
+          <input
+            min="0"
+            value={invert ? amount : Math.round(amount / 60)}
+            onChange={onChange}
+            id="hours"
+            type="number"
+            placeholder="Hours"
+            disabled={!invert}
+          />
+          hrs
+          <br />
+          <button onClick={onInvert}>{invert ? "Mins to Hours" : "Hours to Mins"}</button>
+        </div>
+      );
+    }
+    function DistConverter() {
+      const [amount, setAmount] = React.useState();
+      const onChange = (event) => {
+        setAmount(event.target.value); //input value -> amount -> html
+      };
+      const onReset = () => {
+        setAmount("");
+      };
+      const [invert, setInvert] = React.useState(false);
+      const onInvert = (event) => {
+        onReset();
+        setInvert((state) => !state);
+      };
+      return (
+        <div>
+          <h3>Distance converter</h3>
+          <label for="km">Kilometers: </label>
+          <input
+            disabled={invert}
+            value={invert ? amount * 1.6 : amount}
+            onChange={onChange}
+            id="km"
+            type="number"
+            placeholder="kilometers"
+          />
+          km
+          <br />
+          <label for="miles">Miles: </label>
+          <input
+            disabled={!invert}
+            value={invert ? amount : amount * 0.6}
+            onChange={onChange}
+            id="miles"
+            type="number"
+            placeholder="miles"
+          />
+          miles
+          <br />
+          <br />
+          <button onClick={onInvert}>{invert ? "Miles to Km" : "Km to Miles"}</button>
+        </div>
+      );
+    }
   </script>
 </html>
